# libwordcount

./: .gitignore  INSTALL  LICENSE  Makefile.in  README.md  butter.c  config.h.in  configure.ac  mkshrlib.sh  word.py  wordcount.c  wordcount.h
